--- a/apps/routing/interface.html
+++ b/apps/routing/interface.html
@@ -10,14 +10,15 @@
     <script src="../../core/lib/interface.js"></script>
   </head>
   <body>
-    <div>
+    <form name="transportationMethods">
+      <legend>Travel by:</legend>
       <input type="radio" name="transportation" id="car" value="car" checked>
       <label for="car">Car</label>
       <input type="radio" name="transportation" id="bike" value="bike">
       <label for="bike">Bike</label>
       <input type="radio" name="transportation" id="foot" value="foot">
       <label for="foot">Foot</label>
-    </div>
+    </form>
     <div id="map" style="height: 70%"></div>
     <p>
       <script>
@@ -26,10 +27,10 @@
         L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
           attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
         }).addTo(map);
-        L.Routing.control({
+        var control = L.Routing.control({
           geocoder: L.Control.Geocoder.nominatim(),
           router: L.Routing.osrmv1({
-            serviceUrl: 'https://routing.openstreetmap.de/routed-foot/route/v1'
+            serviceUrl: 'https://routing.openstreetmap.de/routed-car/route/v1'
           })
         }).on('routesfound', function(e) {
           // Only store the minimal required data - the complete JSON exceeds the watch's
@@ -74,6 +75,13 @@
           console.log(toUpload);
           document.getElementById('upload').disabled = false;
         }).addTo(map);
+
+        var transportationButtons = document.transportationMethods.transportation;
+        for (var i = 0; i < transportationButtons.length; i++) {
+          transportationButtons[i].addEventListener('change', (event) => {
+            control.getRouter().options.serviceUrl = "https://routing.openstreetmap.de/routed-" + event.srcElement.value + "/route/v1";
+          });
+        }
       </script>
     </p>
     <p>
